--- a/src/app/pages/details/details.scss
+++ b/src/app/pages/details/details.scss
@@ -25,6 +25,8 @@
     }
 }
 
+$gradient-sequence: ui-color(white), ui-color(white) 50%, transparent;
+
 .details-page {
 
     @include width-up-to($phone-max) {
@@ -51,21 +53,24 @@
             display: grid;
             grid-template-columns: auto 1fr;
 
-            &.drawer-open {
-                max-width: calc(50vw + 60rem);
+            &.drawer-open > .content {
+                margin-left: 0;
+                max-width: none;
+                padding-right: calc(50vw - #{$content-max / 2});
             }
 
             > .toc-slideout {
+                background-color: ui-color(white);
                 border-right: thin solid ui-color(form-border);
                 overflow-y: auto;
-                padding: 3rem 1rem 3rem;
+                padding: 0;
                 position: relative;
                 transition: width 0.3s;
                 width: 30vw;
             }
 
             .toc-drawer {
-                padding-right: 2.5rem;
+                padding-right: 4rem;
             }
 
             .close-toc {
@@ -75,10 +80,27 @@
                 display: flex;
                 height: 2.8rem;
                 justify-content: center;
-                position: sticky;
-                float: right;
-                top: 0;
                 width: 2.8rem;
+            }
+
+            .top-padding,
+            .bottom-padding {
+                height: 6rem;
+                padding: $normal-margin;
+                position: sticky;
+                width: 100%;
+            }
+
+            .top-padding {
+                background-image: linear-gradient(to bottom, $gradient-sequence);
+                display: flex;
+                justify-content: flex-end;
+                top: 0;
+            }
+
+            .bottom-padding {
+                background-image: linear-gradient(to top, $gradient-sequence);
+                bottom: 0;
             }
         }
 
