Handle different-sizes of blog article images
This gets the images to display in the articles.

--- a/src/app/components/body-units/aligned-image.html
+++ b/src/app/components/body-units/aligned-image.html
@@ -1,6 +1,6 @@
 <template args="model">
-    <figure>
-        <img class="align-{model.alignment}" src="{model.imageUrl}" alt="{model.alt_text}">
+    <figure class="{model.alignmentClass}">
+        <img src="{model.imageUrl}" alt="{model.imageAlt}">
         <figcaption data-html="caption"></figcaption>
     </figure>
 </template>
