Use map background image rather than live map

--- a/src/app/pages/global-reach/map/map.html
+++ b/src/app/pages/global-reach/map/map.html
@@ -1,5 +1,5 @@
 <template args="model">
-    <div id="mapdiv" skip="true"></div>
+    <div class="map-image" style="background-image: url('{model.imageUrl}')"></div>
     <div class="overlay">
         <div class="boxed">
             <h1>{model.heading}</h1>
