--- a/src/app/pages/rover-3/getting-started/getting-started.html
+++ b/src/app/pages/rover-3/getting-started/getting-started.html
@@ -13,5 +13,6 @@
                 <div data-html="cards[{$item}].video"></div>
             </div>
         </div>
+        <a class="btn blue large" href={model.moreUrl}>{model.moreText}</a>
     </div>
 </template>
