--- a/src/app/pages/rover-3/meet-rover/meet-rover.html
+++ b/src/app/pages/rover-3/meet-rover/meet-rover.html
@@ -4,21 +4,23 @@
         <div class="feature-grid">
             <div>
                 <i class="icon pink fas fa-tasks"></i>
-                <div class="text-block" data-html="cards[0].description"></div>
+                <div data-html="cards[0].description"></div>
             </div>
             <img class="vertical-chalk-line" src="/images/rover-3/fill-2857.svg">
             <div>
                 <i class="icon yellow fas fa-chart-bar"></i>
-                <div class="text-block" data-html="cards[1].description"></div>
+                <div data-html="cards[1].description"></div>
             </div>
-            <img class="horizontal-chalk-line" src="/images/rover-3/fill-5720.svg">
+            <img class="horizontal-chalk-line mobile-only" src="/images/rover-3/fill-5720.svg">
+            <img class="vertical-chalk-line" src="/images/rover-3/fill-2857.svg">
             <div>
                 <i class="icon green fas fa-award"></i>
-                <div class="text-block" data-html="cards[2].description"></div>
+                <div data-html="cards[2].description"></div>
             </div>
+            <img class="vertical-chalk-line mobile-only" src="/images/rover-3/fill-2857.svg">
             <div>
                 <i class="icon blue fas fa-hand-holding-usd"></i>
-                <div class="text-block" data-html="cards[3].description"></div>
+                <div data-html="cards[3].description"></div>
             </div>
         </div>
         <div class="text-block">
