--- a/src/app/pages/rover-3/faq/faq.html
+++ b/src/app/pages/rover-3/faq/faq.html
@@ -11,4 +11,7 @@
             </div>
         </div>
     </div>
+    <div class="for-mobile to-top">
+        <div role="button"><i class="fas fa-arrow-up"></i></div>
+    </div>
 </template>
