--- a/src/app/pages/rover-3/office-hours/office-hours.html
+++ b/src/app/pages/rover-3/office-hours/office-hours.html
@@ -1,9 +1,11 @@
 <template args="model">
     <div class="boxed">
         <img src="{model.image.image}" alt="{model.image.altText}">
-        <div class="text-block">
+        <div class="text-block top">
             <h2>{model.heading}</h2>
             <div class="tagline" data-html="description"></div>
+        </div>
+        <div class="text-block bottom">
             <div class="fine-print" data-html="moreInfo"></div>
             <a href="{model.linkUrl}" class="btn blue">{model.linkText}</a>
         </div>
