--- a/src/app/pages/rover-3/office-hours/office-hours.scss
+++ b/src/app/pages/rover-3/office-hours/office-hours.scss
@@ -1,13 +1,36 @@
 @import 'pattern-library/core/pattern-library/headers';
 
 .rover-by-openstax #office-hours {
-    padding: 9.4rem 0 12rem;
+    @include width-up-to($phone-max) {
+        padding: $normal-margin 0;
+    }
+
+    @include width-between($phone-max, $tablet-max) {
+        padding: 8vw 0;
+    }
+
+    @include wider-than($tablet-max) {
+        padding: 9.4rem 0 12rem;
+    }
 
     .boxed {
         display: grid;
         grid-column-gap: 3rem;
-        grid-template-columns: 1fr 1fr;
-        padding-top: 6rem;
+        grid-row-gap: 2rem;
+        grid-template-columns: 100%;
+
+        @include wider-than($phone-max) {
+            grid-template-columns: 1fr 1fr;
+
+            > img {
+                grid-column: 1;
+                grid-row: 1 / 3;
+            }
+
+            .bottom-border-container {
+                grid-column: 1 / 3;
+            }
+        }
     }
 
     .text-block {
@@ -24,17 +47,22 @@
         p:empty {
             display: none;
         }
+
+        @include width-up-to($phone-max) {
+            &.top {
+                grid-row: 1;
+            }
+            &.bottom {
+                grid-row: 3;
+            }
+        }
     }
 
     .fine-print {
         @include set-font(helper-label);
     }
 
-    .btn {
-        margin-top: 2rem;
-    }
-
     .bottom-border-container {
-        grid-column: 1 / 3;
+        margin: 0;
     }
 }
