--- a/src/app/components/shell/header/main-menu/main-menu.html
+++ b/src/app/components/shell/header/main-menu/main-menu.html
@@ -25,7 +25,9 @@
             </li>
         </if>
     </ul>
-    <button class="expand" aria-haspopup="true" aria-label="Toggle Meta Navigation Menu" tabindex="0">
-      <span></span>
+    <button class="expand" aria-haspopup="true" aria-label="Toggle Meta Navigation Menu"
+        tabindex="0" aria-expanded="{model.headerActive}">
+      <i class="menu-icon fas fa-bars"></i>
+      <i class="put-away-icon fas fa-times"></i>
     </button>
 </template>
